--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,12 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
-{% include _head.html %}
+{% include custom.html %}
 </head>
 
 <body class="home">
 
-{% include _browser-upgrade.html %}
+<!-- {% include _browser-upgrade.html %} -->
 
 {% include _navigation.html %}
 
