--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
 
 <body class="home">
 
-<!-- {% include _browser-upgrade.html %} -->
+{% include _browser-upgrade.html %}
 
 {% include _navigation.html %}
 
