--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@
 
 <div id="main" role="main">
   <div class="article-author-side">
-    {% include _author-bio.html %}
+    {% include author-profile.html %}
   </div>
   <div id="index">
     <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
