changes in home.html 2

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,11 +51,11 @@
 
 <div class="footer-wrap">
   <footer>
-    {% include _footer.html %}
+    {% include footer.html %}
   </footer>
 </div><!-- /.footer-wrap -->
 
-{% include _scripts.html %}
+{% include scripts.html %}
 
 </body>
 </html>
