--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,11 @@
 ---
-layout: archive
+layout: splash
 ---
 
+<!-- Set up head -->
+<!-- {% include _navigation.html %} -->
+
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
@@ -12,6 +16,7 @@ layout: archive
   {% assign posts = site.posts %}
 {% endif %}
 
+<!-- Page layout -->
 {% assign entries_layout = page.entries_layout | default: 'list' %}
 <div class="entries-{{ entries_layout }}">
   {% for post in posts %}
