--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -144,6 +144,29 @@
   }
 }
 
+.author__avatar_large {
+  display: table-cell;
+  vertical-align: top;
+  width: 50px;
+  height: 50px;
+
+  @include breakpoint($large) {
+    display: block;
+    width: auto;
+    height: auto;
+  }
+
+  img {
+    max-width: 200px;
+    border-radius: 50%;
+
+    @include breakpoint($large) {
+      padding: 5px;
+      border: 1px solid $border-color;
+    }
+  }
+}
+
 .author__content {
   display: table-cell;
   vertical-align: top;
